crates/derive/tests/reactive/fail/01-enum.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
pub enum TestEnum {
    One,
    Two,
}

fn main() {}
