crates/derive/tests/reactive/fail/01-enum.stderr
error: derive(Reactive) is only supported on struct types.
 --> tests/reactive/fail/01-enum.rs:4:5
  |
4 | pub enum TestEnum {
  |     ^^^^
